Changed the deserialization statement from view class to model class